# Optimizer

./: README.md
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERIFICATION.md  VERIFICATION_REPORT.md  main.py  pyproject.toml  run_cli.py
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/app/: __init__.py  classifier.py  model_router.py  orchestrator.py  reranker.py  responder.py  retrieval_controller.py  retriever.py  schemas.py
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/data/: knowledge_base.json  memory_store.json  web_cache.json
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/docs/: ARCHITECTURE.md  PUBLIC_SAFE_STRATEGY.md  ROADMAP.md
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/examples/: request.json
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/scripts/: smoke_test.sh
ares_optimizer_public_github_ready_tested/ares_optimizer_public_tested/tests/: test_public_pipeline.py
